# rust-xp-ratatui

./: Cargo.toml  README.md
examples/: c01-simple.rs  c02-term-reader.rs  c02-tin-reader.rs  c03-layout-manual.rs  c04-layout-simple.rs  c05-widgets-simple.rs  c10-app-simple-ui.rs  c50-ct-async-key.rs
src/: app_event.rs  data_event.rs  error.rs  lib.rs  term_reader.rs  tin_reader.rs
