[package]
name = "xp-ratatui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lints.rust]
# unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
futures-timer = "3.0.3"
futures = "0.3.31"
# -- Cli
ratatui = "0.29.0"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6.3"
# -- Others
derive_more = {version = "2", features = ["from", "display"] }

